home task done. updates to appsettings.*.json

--- a/src/BlazorAdmin/wwwroot/appsettings.PROD_EU.json
+++ b/src/BlazorAdmin/wwwroot/appsettings.PROD_EU.json
@@ -1,9 +1,7 @@
 {
   "baseUrls": {
     "apiBase": "https://shoki-eshoponweb-pubicapi.azurewebsites.net/api/",
-    "webBase": "https://shoki-eshoponweb-eu.azurewebsites.net/" //for demo, looking at 
-    //"apiBase": "https://localhost:5099/api/",
-    //"webBase": "https://localhost:44315/"
+    "webBase": "https://shoki-eshoponweb-eu.azurewebsites.net/"
   },
   "Logging": {
     "IncludeScopes": false,
