--- a/src/PublicApi/appsettings.json
+++ b/src/PublicApi/appsettings.json
@@ -1,7 +1,9 @@
 {
   "baseUrls": {
-    "apiBase": "https://localhost:5099/api/",
-    "webBase": "https://localhost:5001/"
+    "apiBase": "https://shoki-eshoponweb-pubicapi.azurewebsites.net/api/",
+    "webBase": "https://shoki-eshoponweb-eu.azurewebsites.net/"
+//    "apiBase": "https://localhost:5099/api/",
+//    "webBase": "https://localhost:5001/"
   },
   "ConnectionStrings": {
     "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
@@ -16,5 +18,6 @@
       "System": "Warning"
     },
     "AllowedHosts": "*"
-  }
+  },
+  "UseOnlyInMemoryDatabase": true
 }
