--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -11,6 +11,12 @@
 
   <ItemGroup>
     <Content Remove="compilerconfig.json" />
+    <Content Update="appsettings.PROD_US.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="appsettings.PROD_EU.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
