--- a/src/Web/appsettings.PROD_EU.json
+++ b/src/Web/appsettings.PROD_EU.json
@@ -1,7 +1,7 @@
 ﻿{
   "baseUrls": {
-    "apiBase": "https://localhost:5099/api/",
-    "webBase": "https://localhost:44315/"
+    "apiBase": "https://shoki-eshoponweb-pubicapi.azurewebsites.net/api/",
+    "webBase": "https://shoki-eshoponweb-eu.azurewebsites.net/"
   },
   "ConnectionStrings": {
     "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
@@ -16,6 +16,6 @@
       "System": "Warning"
     },
     "AllowedHosts": "*"
-  }
-  //"UseOnlyInMemoryDatabase": true
+  },
+  "UseOnlyInMemoryDatabase": true
 }
