work done. using DB, calling AzureFunction

--- a/src/PublicApi/appsettings.json
+++ b/src/PublicApi/appsettings.json
@@ -1,13 +1,13 @@
 {
   "baseUrls": {
-    "apiBase": "https://shoki-eshoponweb-pubicapi.azurewebsites.net/api/",
-    "webBase": "https://shoki-eshoponweb-eu.azurewebsites.net/"
-//    "apiBase": "https://localhost:5099/api/",
-//    "webBase": "https://localhost:5001/"
+//    "apiBase": "https://shoki-eshoponweb-pubicapi.azurewebsites.net/api/",
+//    "webBase": "https://shoki-eshoponweb-eu.azurewebsites.net/"
+    "apiBase": "https://localhost:5099/api/",
+    "webBase": "https://localhost:5001/"
   },
   "ConnectionStrings": {
-    "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
-    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
+    "CatalogConnection": "Server=tcp:cloudx-eshoponweb.database.windows.net,1433;Initial Catalog=cloudx-eshoponweb;Persist Security Info=False;User ID=shokiadmin;Password=Luka1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "IdentityConnection": "Server=tcp:cloudx-eshoponweb.database.windows.net,1433;Initial Catalog=cloudx-eshoponweb;Persist Security Info=False;User ID=shokiadmin;Password=Luka1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "CatalogBaseUrl": "",
   "Logging": {
@@ -18,6 +18,6 @@
       "System": "Warning"
     },
     "AllowedHosts": "*"
-  },
-  "UseOnlyInMemoryDatabase": true
+  }
+  //"UseOnlyInMemoryDatabase": true
 }
