--- a/src/Web/appsettings.Development.json
+++ b/src/Web/appsettings.Development.json
@@ -9,6 +9,6 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  },
-  "UseOnlyInMemoryDatabase": true
+  }
+  //"UseOnlyInMemoryDatabase": true
 }
