posting message to serviceBus done

--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -17,7 +17,13 @@
     },
     "AllowedHosts": "*",
   },
+    
   //key vault stuff
   "KeyVaultName" : "shoki-keyvault",
-  "KeyVaultConnectionStringSecretName" : "AzureConnectionString"
+  "KeyVaultConnectionStringSecretName" : "AzureConnectionString",
+  
+  //ServiceBus Connection string
+  "DeliveryServiceServiceBusClientName" : "DeliveryServiceServiceBusClient",
+  "DeliveryServiceServiceBusConnectionString": "Endpoint=sb://shoki-eshoponweb.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=TaKJiuPjfavn9yjTHAcflGOypRpN258siNCvWIl54QA=",
+  "DeliveryServiceQueueName" : "cloudx-eshoponweb-deliveryservice"
 }
