--- a/src/AzureFunctions/AzureFunctions.csproj
+++ b/src/AzureFunctions/AzureFunctions.csproj
@@ -6,6 +6,7 @@
     <ItemGroup>
         <PackageReference Include="Azure.Storage.Blobs" Version="12.13.1" />
         <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.30.1" />
+        <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
         <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.ServiceBus" Version="5.2.0" />
         <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
     </ItemGroup>
