--- a/src/PublicApi/appsettings.Docker.json
+++ b/src/PublicApi/appsettings.Docker.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
-    "CatalogConnection": "Server=sqlserver,1433;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;User Id=sa;Password=@someThingComplicated1234;Trusted_Connection=false;",
-    "IdentityConnection": "Server=sqlserver,1433;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;User Id=sa;Password=@someThingComplicated1234;Trusted_Connection=false;"
+//    "CatalogConnection": "Server=sqlserver,1433;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;User Id=sa;Password=@someThingComplicated1234;Trusted_Connection=false;",
+//    "IdentityConnection": "Server=sqlserver,1433;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;User Id=sa;Password=@someThingComplicated1234;Trusted_Connection=false;"
+    "CatalogConnection": "Server=tcp:cloudx-eshoponweb.database.windows.net,1433;Initial Catalog=cloudx-eshoponweb;Persist Security Info=False;User ID=shokiadmin;Password=Luka1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "IdentityConnection": "Server=tcp:cloudx-eshoponweb.database.windows.net,1433;Initial Catalog=cloudx-eshoponweb;Persist Security Info=False;User ID=shokiadmin;Password=Luka1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "baseUrls": {
     "apiBase": "http://localhost:5200/api/",
