--- a/src/Web/Dockerfile
+++ b/src/Web/Dockerfile
@@ -8,16 +8,17 @@
 # RUN COMMAND
 #  docker run --name eshopweb --rm -it -p 5106:5106 web
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+ENV ASPNETCORE_ENVIRONMENT=Docker
 WORKDIR /app
 
 COPY *.sln .
 COPY . .
 WORKDIR /app/src/Web
 RUN dotnet restore
-
 RUN dotnet publish -c Release -o out
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS runtime
+ENV ASPNETCORE_ENVIRONMENT=Docker
 WORKDIR /app
 COPY --from=build /app/src/Web/out ./
 
