--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -4,8 +4,8 @@
     "webBase": "https://localhost:44315/"
   },
   "ConnectionStrings": {
-    //"CatalogConnection": "Server=tcp:cloudx-eshoponweb.database.windows.net,1433;Initial Catalog=cloudx-eshoponweb;Persist Security Info=False;User ID=shokiadmin;Password=Luka1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    //"IdentityConnection": "Server=tcp:cloudx-eshoponweb.database.windows.net,1433;Initial Catalog=cloudx-eshoponweb;Persist Security Info=False;User ID=shokiadmin;Password=Luka1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "CatalogConnection": "Server=tcp:cloudx-eshoponweb.database.windows.net,1433;Initial Catalog=cloudx-eshoponweb;Persist Security Info=False;User ID=shokiadmin;Password=Luka1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "IdentityConnection": "Server=tcp:cloudx-eshoponweb.database.windows.net,1433;Initial Catalog=cloudx-eshoponweb;Persist Security Info=False;User ID=shokiadmin;Password=Luka1234;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "CatalogBaseUrl": "",
   "Logging": {
